--- a/package.json
+++ b/package.json
@@ -19,13 +19,16 @@
   "homepage": "https://github.com/lekpeng96/food-rescue#readme",
   "dependencies": {
     "bcrypt": "^5.0.1",
+    "cloudinary": "^1.30.1",
     "dotenv": "^16.0.1",
     "ejs": "^3.1.8",
     "express": "^4.18.1",
     "express-session": "^1.17.3",
     "joi": "^17.6.0",
     "method-override": "^3.0.0",
-    "mongoose": "^6.5.0"
+    "mongoose": "^6.5.0",
+    "multer": "^1.4.5-lts.1",
+    "multer-storage-cloudinary": "^4.0.0"
   },
   "nodemonConfig": {
     "watch": [
