--- a/package.json
+++ b/package.json
@@ -39,7 +39,8 @@
     "method-override": "^3.0.0",
     "mongoose": "^6.5.1",
     "multer": "^1.4.5-lts.1",
-    "multer-storage-cloudinary": "^4.0.0"
+    "multer-storage-cloudinary": "^4.0.0",
+    "socket.io": "^4.5.1"
   },
   "engines": {
     "node": "18.x",
